--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.11"
 yt-dlp = "^2023.11.16"
 python-telegram-bot = "^20.7"
+aioprometheus = "^23.3.0"
+aiohttp = "^3.9.1"
 
 
 [build-system]
