better utilize docker cache in github actions to speed up build

--- a/.github/workflows/do_build_image.yml
+++ b/.github/workflows/do_build_image.yml
@@ -57,9 +57,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          key: ${{ runner.os }}-buildx
           restore-keys: |
-            ${{ runner.os }}-buildx-
+            ${{ runner.os }}-buildx
 
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
