--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,12 @@
-[tool.poetry]
+[project]
 name = "tg-yt-dlp"
 version = "0.1.0"
-description = "Telegram bot that downloads videos from YouTube and other sites"
-authors = ["Andrew Zhu <dir01@dir01.org>"]
-license = "MIT"
+description = "Add your description here"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.11"
-yt-dlp = "^2025.2.19"
-python-telegram-bot = "^21.10"
-aioprometheus = "^23.12.0"
-aiohttp = "^3.11.13"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.9"
+dependencies = [
+    "aiohttp>=3.11.13",
+    "aioprometheus>=23.12.0",
+    "python-telegram-bot>=21.10",
+    "yt-dlp>=2025.2.19",
+]
